background colour of main class fixed and width,height, alignment of items are also fixed

--- a/style.css
+++ b/style.css
@@ -8,4 +8,17 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+   
+}
+
+.main
+{
+    position: relative;
+    height: 80%;
+    width: 80%;
+     display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(to right, #5d5d5d, #566573)
+    
 }
